2009-07-09  Sebastien Pouliot  <sebastien at ximian.com>

	* plugin.cpp: Check for redirection each time a new stream
	is created (i.e. before downloading) using the current URI (not
	the original one) so we can detect redirection correctly.

2009-07-07  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: EventObjectCreateWrapper: return null as the
	wrapper for a null object.

2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-downloader.h: Add response getter.

	* plugin-downloader.cpp: Regenerated.

	* cbinding.h: Regenerated.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-downloader.cpp: When calling Send, reset the finished
	field, so that we abort it properly upon destruction if the
	PluginDownloader has been reused.

2009-07-01  Chris Toshok  <toshok@ximian.com>

	* plugin-proxy.cpp (load): check the return value of
	dlopen(libmono.so) before we make use of mono_config_parse_memory.

	* plugin-entry.cpp: remove the moz-sdk includes, since they get
	pulled in from moonlight.h

	* plugin-class.h|cpp (MoonlightContentObject::GetProperty): add
	Accessibility support.
	(MoonlightContentObject::SetProperty): same.
	(MoonlightContentObject::~MoonlightContentObject): unref the
	accessibility object.

	* moonlight.h: add the moz-sdk/ prefix for the np* headers here.

	* Makefile.am (libmoonplugin_la_SOURCES): add
	plugin-accessibility.
	(INCLUDES): remove the moz-sdk include, and add it the #includes
	so things work when files are included from the src/ directory.

	* plugin-accessibility.h|cpp: new DependencyObject subclass to
	represent the plugin's content.accessibility object.
	
	* cbinding.h, plugin-class.h: regen.

2009-06-30  Jackson Harper  <jackson@ximian.com>

	* plugin-class.cpp: Update function signature, add the validate
	templates param
	* cbinding.h: regen

2009-06-30  Alan McGovern  <amcgovern@novell.com>

	* plugin-class.cpp: Use SetValueWithError instead of SetValue