@@ -141,7 +141,7 @@ const int Surface::ErrorEvent = 1;
 const int Surface::FullScreenChangeEvent = 2;
 const int Surface::LoadEvent = 3;
 const int Surface::ResizeEvent = 4;
-const int Surface::SourceDownloadCompletedEvent = 5;
+const int Surface::SourceDownloadCompleteEvent = 5;
 const int Surface::SourceDownloadProgressChangedEvent = 6;
 const int TextBox::SelectionChangedEvent = 23;
 const int TextBox::TextChangedEvent = 24;
@@ -197,7 +197,7 @@ const char *PASSWORDBOX_Events [] = { "PasswordChanged", NULL };
 const char *PLAYLISTROOT_Events [] = { "BufferingProgressChanged", "BufferUnderflow", "CurrentStateChanged", "DownloadProgressChanged", "MediaEnded", "MediaError", "OpenCompleted", "Opening", "Pause", "Play", "SeekCompleted", "Seeking", "Stop", NULL };
 const char *POPUP_Events [] = { "Closed", "Opened", NULL };
 const Type::Kind STRING_Interfaces[] = { Type::ICOMPARABLE, Type::ICOMPARABLE_STRING, Type::ICONVERTIBLE, Type::IEQUATABLE_STRING, Type::IFORMATTABLE };
-const char *SURFACE_Events [] = { "Error", "FullScreenChange", "Load", "Resize", "SourceDownloadCompleted", "SourceDownloadProgressChanged", NULL };
+const char *SURFACE_Events [] = { "Error", "FullScreenChange", "Load", "Resize", "SourceDownloadComplete", "SourceDownloadProgressChanged", NULL };
 const char *TEXTBOX_Events [] = { "SelectionChanged", "TextChanged", NULL };
 const char *TEXTBOXBASE_Events [] = { "CursorPositionChanged", "ModelChanged", NULL };
 const char *TIMELINE_Events [] = { "Completed", NULL };
