@@ -1,3 +1,8 @@
+2009-07-10  Sebastien Pouliot  <sebastien at ximian.com>
+
+	* runtime.cpp|h, type-generated.cpp: Rename 
+	SourceDownloadCompletedEvent to SourceDownloadCompleteEvent
+
 2009-07-09  Jeffrey Stedfast  <fejj@novell.com>
 
 	Fixes DRT #246
