@@ -1,3 +1,8 @@
+2009-07-10  Sebastien Pouliot  <sebastien at ximian.com>
+
+	* plugin.cpp|h, plugin-class.cpp|h: Rename 
+	SourceDownloadCompletedEvent to SourceDownloadCompleteEvent
+
 2009-07-09  Sebastien Pouliot  <sebastien at ximian.com>
 
 	* plugin.cpp: Check for redirection each time a new stream
